<resources>
    <string name="app_name">WinDairy</string>
    <string name="cow_buf">Milk Type</string>
    <string name="winsoft_logo">Winsoft Logo</string>
    <string-array name="member_type">
        <item>Member</item>
        <item>Contractor</item>
        <item>Labour Contractor</item>
    </string-array>

    <string-array name="array_item">
        <item>Select Item</item>
    </string-array>

    <string name="value_any_type">All Types</string>
    <string name="value_any_time">Any Time</string>
    <string name="all_records">All Records</string>

    <string name="sort_by_name">Member Name</string>
    <string name="sort_by_code">Member Code</string>
    <string name="app_name_main">Winsoft Dairy Management</string>
    <string name="milk_collection">Milk Collection</string>
    <string name="milk_sale">Milk Sale</string>
    <string name="export_database">Export Database</string>
    <string name="cattlefeed_entry">Cattlefeed Entry</string>
    <string name="members">Members</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="rate_group_name">Rate Group Name</string>
    <string name="zone_code">Zone Code</string>
    <string name="both">Both</string>
    <string name="buffalo">Buffalo</string>
    <string name="cow">Cow</string>
    <string name="member_type">Member Type</string>
    <string name="member_name">Member Name</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="branch_name">Branch Name</string>
    <string name="id">Id</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="qty">Qty</string>
    <string name="fat">Fat</string>
    <string name="rate">Rate</string>
    <string name="amount">Amount</string>
    <string name="select_date">Select Date</string>
    <string name="mem_id">Mem Id</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="spaces" />
    <string name="particulars">Particulars</string>
    <string name="degree">Degree</string>
    <string name="rate_group">Rate Group</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="credit">Credit</string>
    <string name="cash">Cash</string>

    <!--    <string name="sort_by_amount">Amount</string>-->

    <!-- Types of Milk -->
    <string-array name="types">
        <item>@string/value_any_type</item>

        <item>Cow</item>
        <item>Buffalo</item>

    </string-array>

    <!-- Time filters -->
    <string-array name="time">
        <item>@string/value_any_time</item>

        <item>Morning</item>
        <item>Evening</item>
    </string-array>

    <!-- Ways you can sort -->
    <string-array name="sort_by">
        <item>@string/sort_by_name</item>
        <item>@string/sort_by_code</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="contact_number">Contact number:</string>
    <string name="phone_number_value">9423039902,9011064474</string>
    <string name="customer_id">Customer ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="licensed_to">Licensed to</string>
    <string name="please_select_dates">Please select dates to Export</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="export">Export</string>
</resources>
