<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:padding="16dp"
        android:text="@string/please_select_dates"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:text="@string/from"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/export_from"
            android:text="@string/select_date"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/to"
            android:textSize="14sp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/export_to"
            android:text="@string/select_date"
            android:textSize="14sp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="end"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_export"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:text="@string/export"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>