<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.LoginActivity">

    <EditText
        android:id="@+id/user_id"
        android:layout_margin="8dp"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customer_id" />

    <EditText
        android:id="@+id/password"
        android:layout_margin="8dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password" />

    <Button
        android:id="@+id/login"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textAlignment="center"
        android:text="@string/login"
        android:textSize="16sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content" />

</LinearLayout>