<?xml version="1.0" encoding="utf-8"?><!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <!--<Button-->
    <!--android:id="@+id/btn_collection"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="16dp"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:onClick="launchCollections"-->
    <!--android:text="Collection"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent" />-->

    <!--<Button-->
    <!--android:id="@+id/btn_sale"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="16dp"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:onClick="launchSales"-->
    <!--android:text="Sale"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/btn_collection" />-->

    <!--<Button-->
    <!--android:id="@+id/btn_export"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="16dp"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:onClick="initiateExport"-->
    <!--android:text="Export"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/btn_sale" />-->

    <!--<Button-->
    <!--android:id="@+id/btn_cattleFeed"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="16dp"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:onClick="launchCattleFeed"-->
    <!--android:text="Cattle Feed Entry"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/btn_export" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <!--            <TextView-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:fontFamily="casual"-->
            <!--                android:text="@string/app_name_main"-->
            <!--                android:textAlignment="center"-->
            <!--                android:textAppearance="@style/TextAppearance.AppCompat.Button"-->
            <!--                android:textColor="@color/colorPrimaryDark"-->
            <!--                android:textSize="20sp"-->
            <!--                android:textStyle="bold" />-->

            <TextView
                android:id="@+id/licensee"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <!--        First-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btn_collection"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:onClick="launchCollections"
                    android:padding="4dp"
                    android:src="@drawable/coll" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/milk_collection"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/btn_cattleFeed"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:onClick="launchCattleFeed"
                    android:padding="4dp"
                    android:src="@drawable/cattle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/cattlefeed_entry"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/btn_member"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:onClick="launchMember"
                    android:padding="4dp"
                    android:src="@drawable/member" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/members"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!--        Second-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btn_sale"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:onClick="launchSales"
                    android:padding="4dp"
                    android:src="@drawable/sale" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/milk_sale"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/btn_export"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:onClick="initiateExport"
                    android:padding="4dp"
                    android:src="@drawable/export" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/export_database"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/btn_settings"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:onClick="launchSettings"
                    android:padding="4dp"
                    android:src="@drawable/settings" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/settings"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="#e0e0e0"
        android:padding="2dp">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:src="@drawable/winsoftlogo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/contact_number"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:textColor="@android:color/black"
                android:text="@string/phone_number_value"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout><!--</ScrollView>-->